--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/287200.es">Concurso &ldquo;200 días para el Mundial de Rugby 2015&rdquo;</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/twentieth-session-of-the-universal-periodic-review-working-group-geneva-27-october-to-7-november-2014--2">Twentieth Session of the Universal Periodic Review Working Group, Geneva, 27 October to 7 November 2014</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-uk-visa-customers-in-kazakhstan--2">Important notice for UK visa customers in Kazakhstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expats-dont-lose-your-vote-in-the-european-parliament-elections--2">British expats: Don’t lose your vote in the European Parliament elections</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/projects-funded-by-the-uk-fcos-global-prosperity-fund--2">Projects funded by the UK FCO’s Global Prosperity Fund</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233503.es">El Consulado de Palma de Mallorca cerrado temporalmente</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/285657.pt">#INFRASTRUCTUREisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-the-uk-governments-prestigious-chevening-scholarships-are-open--2">Applications for the UK Government’s prestigious Chevening Scholarships are open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/eu-referendum-outcome-pm-statement-24-june-2016--2">EU referendum outcome: PM statement, 24 June 2016</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/my-final-blog-muchas-gracias-y-hasta-pronto">My final blog. ¡Muchas gracias y hasta pronto!</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/office-closure--3">Office Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269252.pt">Britânicos participam da maior feira ferrovária da América Latina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/did-you-know-you-may-be-eligible-to-vote-in-the-eu-referendum--2">Did you know you may be eligible to vote in the EU Referendum?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197760.ar">السفير البريطاني في لبنان: آمل أن يغير حزب الله اتجاهه عن مصالح إيران والأسد</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/locate-switch-off">LOCATE switch-off</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/belizean-military-top-brass-visit-united-kingdom">Belizean military top brass visit United Kingdom</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
