--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-are-now-open--2">Applications for 2014/15 Chevening Scholarships in Lebanon Open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/253325.pt">Reino Unido busca ampliar parcerias para Rio 2016</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/229395.zh-tw">海外申請英國護照的費用調降</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/first-minister-of-wales-visits-uganda--2">First Minister of Wales visits Uganda</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-meets-prime-minister-netanyahu-in-israel">Foreign Secretary meets Prime Minister Netanyahu in Israel</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--32">Turks and Caicos Islands post Cabinet meeting statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/231480.zh-tw">呼應聯合國最新氣候報告 英國貿易文化辦事處與台達共同呼籲強化節能政策對抗暖化</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201650.fr">&ldquo;Nous pouvons faire de l&#39;action nécessaire contre le changement climatique une opportunité, et non un fardeau&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/173244.lt">Lietuva perėmė Europos Sąjungos vairą</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/261585.ja">気候変動対策と経済成長は両立が可能なことを示す報告書を発表</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238911.pt">Conferência sobre Eficiência Energética em Belo Horizonte</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-18th-session-of-the-universal-periodic-review-working-group-geneva-27-january-to-7-february-2014--8">Human Rights Council: 18th Session of the Universal Periodic Review Working Group, Geneva, 27 January to 7 February 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/208807.es">Expositores británicos opinan sobre Smart Cities en Barcelona</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-cabinet-update-and-actions--4">Turks and Caicos Islands Cabinet update and actions</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
