--- a/apps/govuk-puppet/adding-a-new-app.html
+++ b/apps/govuk-puppet/adding-a-new-app.html
@@ -654,7 +654,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-puppet/commit/440b097a86664c33a6dbdfb4ea092c45041c3638">7 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-puppet/commit/a2eb9726da1d1d49b59e4c6862129c6174f66db9">26 Apr 2021</a>
 </div>
 
   <h1 class="page-title">govuk-puppet: adding-a-new-app</h1>
@@ -745,14 +745,15 @@ app does not need them:</p>
 
   # see modules/govuk/manifests/app.pp for more options
   govuk::app { $app_name:
-    ensure            =&gt; $ensure,
-    app_type          =&gt; 'rack',
-    port              =&gt; $port,
-    sentry_dsn        =&gt; $sentry_dsn,
-    vhost_ssl_only    =&gt; true,
-    health_check_path =&gt; '/healthcheck', # must return HTTP 200 for an unauthenticated request
-    deny_framing      =&gt; true,
-    asset_pipeline    =&gt; true,
+    ensure                     =&gt; $ensure,
+    app_type                   =&gt; 'rack',
+    port                       =&gt; $port,
+    sentry_dsn                 =&gt; $sentry_dsn,
+    vhost_ssl_only             =&gt; true,
+    has_liveness_health_check  =&gt; true,
+    has_readiness_health_check =&gt; true,
+    deny_framing               =&gt; true,
+    asset_pipeline             =&gt; true,
   }
 
   Govuk::App::Envvar {
