--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -407,15 +407,15 @@
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
       <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
+      <li><a href="http://www.barnet.gov.uk/" class="govuk-link">London Borough of Barnet Council</a></li>
+      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
+      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
       <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
+      <li><a href="http://www.birmingham.gov.uk" class="govuk-link">Birmingham City Council</a></li>
       <li><a href="https://gov.wales/covid-19-alert-levels" class="govuk-link">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
       <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="https://www.moneyadviceservice.org.uk/en/categories/managing-debt" class="govuk-link">Debt management - Money Advice Service</a></li>
-      <li><a href="http://www.pembrokeshire.gov.uk" class="govuk-link">Pembrokeshire County Council</a></li>
+      <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
