--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/internship-opportunity-at-the-british-embassy-in-lima--4">Internship opportunity at the British Embassy in Lima</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/royal-baby-pm-statement">Royal baby: PM statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-great-delhi-university-inter-college-debate-2014--2">The GREAT Delhi University inter college debate - 2014</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--2">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/--8">英國貿易投資署和英國智慧財產權官員協助蘇格蘭威士忌協會打擊中國侵權，成功捍衛蘇格蘭原產地地理標示資格</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/big-ideas-get-them-off-the-ground-in-the-uk--2">Big ideas? Get them off the ground in the UK</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-trade-and-investment-announcements-highlight-strength-of-uk-taiwan-bilateral-relations--2">New trade and investment announcements highlight strength of UK-Taiwan bilateral relations</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-zagreb-closed-for-easter-holidays">British Embassy Zagreb and British consulates are closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-are-now-open--2">Applications for 2014/15 Chevening Scholarships in Lebanon Open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/253325.pt">Reino Unido busca ampliar parcerias para Rio 2016</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/229395.zh-tw">海外申請英國護照的費用調降</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/first-minister-of-wales-visits-uganda--2">First Minister of Wales visits Uganda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-meets-prime-minister-netanyahu-in-israel">Foreign Secretary meets Prime Minister Netanyahu in Israel</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--32">Turks and Caicos Islands post Cabinet meeting statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/231480.zh-tw">呼應聯合國最新氣候報告 英國貿易文化辦事處與台達共同呼籲強化節能政策對抗暖化</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
